Fixed the design on homepage: cards, banner, view height, overlapping navbar, texts, titles, etc.

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,9 @@
 .banner {
-  height: 100vh;
+  height: calc(100vh - 120px);
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-image:linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), image-url("home-banner.jpeg");
+  background-image:linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?auto=format&fit=crop&w=2550&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');
   background-size: cover;
   h1 {
     color: white;
