--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -55,6 +55,10 @@
   }
 }
 
+#homepage-text-center-dashboard {
+  margin-top: 60px;
+}
+
 .search-boxes {
   display: flex;
   justify-content: around;
@@ -63,6 +67,10 @@
 
 .wrapper-testimonial {
   background-color: #F9F9F9 !important;
+//   background-image: url(https://images.unsplash.com/photo-1491438590914-bc09fcaaf77a?auto=format&fit=crop&w=1500&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D);
+//   background-size: cover;
+// -webkit-clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 70%, 68% 100%, 30% 100%, 0 100%, 0% 30%);
+// clip-path: polygon(0 0, 100% 0, 100% 30%, 100% 70%, 68% 100%, 30% 100%, 0 100%, 0% 30%);
 }
 
 .testimonials{
@@ -74,14 +82,14 @@ figure.snip1139 {
   position: relative;
   float: left;
   overflow: hidden;
-  margin: 10px 1%;
-  min-width: 220px;
-  max-width: 310px;
-  width: 100%;
+  margin: 10px 10px 80px 10px;
+  // min-width: 220px;
+  // max-width: 310px;
+  width: 33%;
   color: #333;
   text-align: left;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  border-radius: 8px;
+  border: 5px white solid;
+  box-shadow: 1px 1px 30px rgba(0,0,0,0.1);
 }
 figure.snip1139 * {
   -webkit-box-sizing: border-box;
